add kafka sample