@@ -44,10 +44,10 @@
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
-                        <compilerArgs>
-                            <arg>--enable-preview</arg>
-                        </compilerArgs>
-                        <jvmArgs>--enable-preview</jvmArgs>
+                        <!--                        <compilerArgs>-->
+                        <!--                            <arg>&#45;&#45;enable-preview</arg>-->
+                        <!--                        </compilerArgs>-->
+                        <!--                        <jvmArgs>&#45;&#45;enable-preview</jvmArgs>-->
                     </configuration>
                     <executions>
                         <execution>
@@ -93,7 +93,7 @@
                                 <configuration>
                                     <systemPropertyVariables>
                                         <native.image.path>
-                                            ${project.build.directory}/${project.build.finalName}-runner
+                                            ${project.build.directory}/${project.build.finalName}-native-runner
                                         </native.image.path>
                                         <java.util.logging.manager>org.jboss.logmanager.LogManager
                                         </java.util.logging.manager>
